--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -15,8 +15,11 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  flex: 1;
   margin: 0;
+}
+
+div {
+  display: flex;
 }
 
 h1, h2, h3, h4, h5, h6 {
