--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -16,10 +16,12 @@ body {
   height: 100%;
   display: flex;
   margin: 0;
-}
 
-div {
-  display: flex;
+  >div:first-of-type {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
