add & style logo / add file-loader / add primary colours

--- a/src/common/components/PrimaryNavBar/styles.scss
+++ b/src/common/components/PrimaryNavBar/styles.scss
@@ -1,2 +1,13 @@
+@import '~styles/variables';
+
 .base {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $mainColor;
+  padding: 1rem;
+}
+
+.logo {
+  width: 5rem;
 }
