resolve css urls / add bg image

--- a/src/common/components/Label/styles.scss
+++ b/src/common/components/Label/styles.scss
@@ -1,8 +1,9 @@
 @import '~styles/variables';
 
 .base {
+  background-image: url('assets/wood_bg.jpg');
 }
 
 .ribbon {
-  background-color: $mainColor;
+  background-color: $accentColor;
 }
